# mnem

./: .gitignore  AUDIT.md  CONVENTIONS.md  README.md  SUITE.md  pyproject.toml
src/mnem/: __init__.py  __main__.py  _minimums.py  cli.py  config.py  conventions.py  failure.py  router.py  sources.py
src/mnem/commands/: __init__.py  doctor.py  hello.py  init.py  passthrough.py  version.py
tests/: test_cli.py  test_conventions.py  test_failure.py  test_first_run.py  test_init.py  test_integration_passthrough.py  test_interactive_verbs.py  test_passthrough_deadlock.py  test_passthrough_json_policy.py  test_router.py  test_sources.py  test_suite_doc_minimums.py  test_usage_errors.py  test_yaams_config_env.py
